css: fixup various line heights.
* Fix the line-height for related tags in the tag editor being too small (fixup for 6f0e50af2)
* Fix the line-height for the autocomplete menu being too large.
* Remove leading-none from various other places now that it's no longer necessary due to 6f0e50af2.

--- a/app/javascript/src/styles/common/autocomplete.scss
+++ b/app/javascript/src/styles/common/autocomplete.scss
@@ -3,7 +3,8 @@
   padding-right: 0 !important; // Overrides .thin-scrollbar
 
   div.ui-menu-item-wrapper {
-    padding: 0.25em 0.4em;
+    padding: 0.25rem;
+    line-height: 1;
 
     &.ui-state-active {
       background-color: var(--autocomplete-selected-background-color);
